# tradebot

./: Cargo.toml  README.md  setup.py
src/: main.rs
src/limit_order_book/: mod.rs  order.rs  orderbook.rs  rb_tree.rs
src/matching_engine/: engine.rs  orderbook.rs
