[package]
name = "tradebot"
version = "0.1.0"
edition = "2021"
author = ["Aman Kumar <aman@amankrx.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
rand = "0.8.5"
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
